# Yandex_trainings

./: .gitignore  README.md
Algorithms_3.0/Beautiful_string/: CMakeLists.txt  Untitled 1.ods
Algorithms_3.0/Beautiful_string/src/: main.cpp  main_to_send.cpp  (+4 more)
Algorithms_3.0/Boring_lecture/: CMakeLists.txt  Untitled 1.ods
Algorithms_3.0/Carriage_sorting_lite/: CMakeLists.txt
Algorithms_3.0/Collector_Diego/: CMakeLists.txt  Untitled 1.ods  Untitled 2.odg
Algorithms_3.0/Control_work/: CMakeLists.txt  Untitled 1.odg  Untitled 1.ods
Algorithms_3.0/Correct_bracket_sequence/: CMakeLists.txt  Untitled 1.ods
Algorithms_3.0/Deque_with_error_defence/: CMakeLists.txt  For Deque_with_error_defence.ods
Algorithms_3.0/Drunk_game/: CMakeLists.txt
Algorithms_3.0/Good_string/: CMakeLists.txt  Untitled 1.ods
Algorithms_3.0/Great_Lineland_migration/: CMakeLists.txt  Untitled 1.ods
Algorithms_3.0/Histograms/: CMakeLists.txt
Algorithms_3.0/Min_rectangle/: CMakeLists.txt  Untitled 1.ods
Algorithms_3.0/Operational_systems_lite/: CMakeLists.txt  Untitled 1.ods
Algorithms_3.0/Postfix_notation/: CMakeLists.txt  Untitled 1.odg  Untitled 1.ods
Algorithms_3.0/Queue_with_error_defence/: CMakeLists.txt
Algorithms_3.0/SNTP/: .~lock.Untitled 1.ods#  CMakeLists.txt  Untitled 1.ods
Algorithms_3.0/Stack_with_error_defence/: CMakeLists.txt
Algorithms_3.0/Stack_with_error_defence/src/: main.cpp
Algorithms_3.0/Sum_rectangle/: CMakeLists.txt  Untitled 1.ods
Yandex_contests/First_contest/6/: CMakeLists.txt  Untitled 1.ods
Yandex_contests/First_contest/6/src/: 6.cpp
(+38 files in other folders)
